force-app/main/default/objects/Lead/fields/byPassGetScoreFin__c.field-meta.xml
<CustomField>
    <fullName>byPassGetScoreFin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>byPassGetScoreFin</label>
    <type>Checkbox</type>
</CustomField>