force-app/main/default/objects/Lead/fields/comisaao_dobro__c.field-meta.xml
<CustomField>
    <fullName>comisaao_dobro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esses leads são elegíveis para a comissão em dobro, ação feita em 14/09/2024 para a Blitz do projeto SBT</description>
    <label>Elegível comissão em dobro</label>
    <type>Checkbox</type>
</CustomField>