force-app/main/default/objects/Lead/fields/CompanyAge__c.field-meta.xml
<CustomField>
    <fullName>CompanyAge__c</fullName>
    <label>Há quanto tempo existe a empresa?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Menos de 1 ano</fullName>
            </value>
            <value>
                <fullName>1 a 3 anos</fullName>
            </value>
            <value>
                <fullName>3 a 5 anos</fullName>
            </value>
            <value>
                <fullName>Mais de 5 anos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>