force-app/main/default/objects/Lead/fields/Contato_BotSGC__c.field-meta.xml
<CustomField>
    <fullName>Contato_BotSGC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo será marcado sempre que um lead for enviado para o SGC e o contato com o cliente seja feito via BOT, possibilitando filtrá-lo em Listviews e Relatórios específicos e retirando duplicidade de ativação do Lead (contato BOT + Vendedor)</description>
    <label>Contato Bot SGC</label>
    <type>Checkbox</type>
</CustomField>