force-app/main/default/objects/Lead/fields/ConversaoMktCloud__c.field-meta.xml
<CustomField>
    <fullName>ConversaoMktCloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para definir Leads que vieram do Marketing Cloud</description>
    <label>Conversão Mkt Cloud</label>
    <type>Checkbox</type>
</CustomField>