force-app/main/default/objects/Lead/fields/ConvertedDateTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDateTimeStamp__c</fullName>
    <formula>RIGHT(&apos;0&apos; + TEXT(MONTH(ConvertedDate)), 2) + &apos;/&apos; +
RIGHT(&apos;0&apos; + TEXT(DAY(ConvertedDate)), 2) + &apos;/&apos; +
TEXT(YEAR(ConvertedDate)) + &apos; &apos; +
&apos;00:00:00&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ConvertedDate Timestamp</label>
    <type>Text</type>
</CustomField>