force-app/main/default/objects/Lead/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <description>Data de criação do lead</description>
    <inlineHelpText>Data de criação do lead</inlineHelpText>
    <label>Data de criação</label>
    <type>DateTime</type>
</CustomField>