force-app/main/default/objects/Lead/fields/CustomerAccountId__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccountId__c</fullName>
    <label>CustomerAccountId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>