force-app/main/default/objects/Lead/fields/Desconto_Black_Friday__c.field-meta.xml
<CustomField>
    <fullName>Desconto_Black_Friday__c</fullName>
    <label>Desconto Black Friday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>