force-app/main/default/objects/Lead/fields/DoNotSendSGC__c.field-meta.xml
<CustomField>
    <fullName>DoNotSendSGC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send SGC</label>
    <type>Checkbox</type>
</CustomField>