force-app/main/default/objects/Lead/fields/Eletromidia_CodigoSEP__c.field-meta.xml
<CustomField>
    <fullName>Eletromidia_CodigoSEP__c</fullName>
    <label>Eletromidia Codigo SEP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>