force-app/main/default/objects/Lead/fields/EmployeesAmount__c.field-meta.xml
<CustomField>
    <fullName>EmployeesAmount__c</fullName>
    <label>quantidade de funcionarios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - 05</fullName>
            </value>
            <value>
                <fullName>05 - 20</fullName>
            </value>
            <value>
                <fullName>20 - 50</fullName>
            </value>
            <value>
                <fullName>50 - 100</fullName>
            </value>
            <value>
                <fullName>Mais de 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>