force-app/main/default/objects/Lead/fields/Empresaa__c.field-meta.xml
<CustomField>
    <fullName>Empresaa__c</fullName>
    <formula>Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empresa</label>
    <type>Text</type>
</CustomField>