force-app/main/default/objects/Lead/fields/EntryAttempts__c.field-meta.xml
<CustomField>
    <fullName>EntryAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tentativas de Entrada</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>