force-app/main/default/objects/Lead/fields/ExternalLeadID__c.field-meta.xml
<CustomField>
    <fullName>ExternalLeadID__c</fullName>
    <label>External Lead ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>