force-app/main/default/objects/Lead/fields/Funil__c.field-meta.xml
<CustomField>
    <fullName>Funil__c</fullName>
    <description>Qual é o funil do lead?</description>
    <inlineHelpText>Qual é o funil do lead?</inlineHelpText>
    <label>Funil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funil</valueSetName>
    </valueSet>
</CustomField>