force-app/main/default/objects/Lead/fields/HasAgencyCurrently__c.field-meta.xml
<CustomField>
    <fullName>HasAgencyCurrently__c</fullName>
    <label>Possui alguma agência atualmente?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Minha empresa é uma Agência</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>