force-app/main/default/objects/Lead/fields/HasBeenAdvertiser__c.field-meta.xml
<CustomField>
    <fullName>HasBeenAdvertiser__c</fullName>
    <label>Já foi anunciante?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim, apenas mídia on</fullName>
            </value>
            <value>
                <fullName>Sim, apenas mídia off</fullName>
            </value>
            <value>
                <fullName>Sim, os dois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>