force-app/main/default/objects/Lead/fields/Infos__c.field-meta.xml
<CustomField>
    <fullName>Infos__c</fullName>
    <formula>&apos;📱&apos; +   nitzap20__WhatsAppId__c  + &apos; | &apos; +  UPPER(Company)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infos</label>
    <type>Text</type>
</CustomField>