force-app/main/default/objects/Lead/fields/Integracao_Lead_SGC__c.field-meta.xml
<CustomField>
    <fullName>Integracao_Lead_SGC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integracao Lead SGC - integração SF - SGC</description>
    <label>Integracao Lead SGC</label>
    <type>Checkbox</type>
</CustomField>