force-app/main/default/objects/Lead/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <description>Última modificação no lead</description>
    <inlineHelpText>Última modificação no lead</inlineHelpText>
    <label>Data da última modificação</label>
    <type>DateTime</type>
</CustomField>