force-app/main/default/objects/Lead/fields/LetraScore__c.field-meta.xml
<CustomField>
    <fullName>LetraScore__c</fullName>
    <label>Letra Score</label>
    <length>1</length>
    <type>Text</type>
</CustomField>