force-app/main/default/objects/Lead/fields/LetraScoreFinal__c.field-meta.xml
<CustomField>
    <fullName>LetraScoreFinal__c</fullName>
    <label>Letra Score Final</label>
    <length>1</length>
    <type>Text</type>
</CustomField>