force-app/main/default/objects/Lead/fields/LetraScoreFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>LetraScoreFinanceiro__c</fullName>
    <label>Letra Score Financeiro</label>
    <length>1</length>
    <type>Text</type>
</CustomField>