force-app/main/default/objects/Lead/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <formula>IF(
    CONTAINS(Website__c, &quot;sbtacelerai&quot;),
    &quot;sbt&quot;,
    IF(
        CONTAINS(Website__c, &quot;eletromidia&quot;),
        &quot;Eletromidia&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mídia</label>
    <type>Text</type>
</CustomField>