force-app/main/default/objects/Lead/fields/Media_Monthly_Investment__c.field-meta.xml
<CustomField>
    <fullName>Media_Monthly_Investment__c</fullName>
    <label>Investimento mensal em Mídia/Conteúdo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não invisto</fullName>
            </value>
            <value>
                <fullName>Entre 1k - 3k</fullName>
            </value>
            <value>
                <fullName>Entre 4k - 10k</fullName>
            </value>
            <value>
                <fullName>Entre 11k - 30k</fullName>
            </value>
            <value>
                <fullName>Mais de 30k</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>