force-app/main/default/objects/Lead/fields/Metalead_id__c.field-meta.xml
<CustomField>
    <fullName>Metalead_id__c</fullName>
    <description>Campo referente ao Lead Id na Meta</description>
    <externalId>true</externalId>
    <label>Meta Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>