force-app/main/default/objects/Lead/fields/MonthlyBilling__c.field-meta.xml
<CustomField>
    <fullName>MonthlyBilling__c</fullName>
    <description>Qual é o faturamento mensal informado</description>
    <inlineHelpText>Qual é o faturamento mensal informado</inlineHelpText>
    <label>Faturamento mensal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Até R$ 30 mil</fullName>
            </value>
            <value>
                <fullName>Entre R$ 30.001 e  R$ 100 mil</fullName>
            </value>
            <value>
                <fullName>Entre  R$ 100.001 e  R$ 300 mil</fullName>
            </value>
            <value>
                <fullName>Acima de  R$ 300 mil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>