force-app/main/default/objects/Lead/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidade atrelada ao lead (será considerado uma oportunidade quando o lead é qualificado)</description>
    <inlineHelpText>Oportunidade atrelada ao lead (será considerado uma oportunidade quando o lead é qualificado)</inlineHelpText>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>