force-app/main/default/objects/Lead/fields/Owner_Target__c.field-meta.xml
<CustomField>
    <fullName>Owner_Target__c</fullName>
    <label>Owner Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>