force-app/main/default/objects/Lead/fields/RD_Etapa_Perda__c.field-meta.xml
<CustomField>
    <fullName>RD_Etapa_Perda__c</fullName>
    <label>RD Etapa Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualificação</fullName>
            </value>
            <value>
                <fullName>3 Tentativa contato</fullName>
            </value>
            <value>
                <fullName>2 Tentativa contato</fullName>
            </value>
            <value>
                <fullName>Sem contato</fullName>
            </value>
            <value>
                <fullName>1 Tentativa contato</fullName>
            </value>
            <value>
                <fullName>Negociação Futura / Suspensa</fullName>
            </value>
            <value>
                <fullName>Negociação / Follow Up</fullName>
            </value>
            <value>
                <fullName>Lead Qualificado</fullName>
            </value>
            <value>
                <fullName>Negociação / Follow Up Campanhas e Peças</fullName>
            </value>
            <value>
                <fullName>Negociação / Follow Up Direito de Imagem</fullName>
            </value>
            <value>
                <fullName>Venda Fechada</fullName>
            </value>
            <value>
                <fullName>Negociação Fechada Campanhas e Peças</fullName>
            </value>
            <value>
                <fullName>Venda Fechada Campanhas e Peças</fullName>
            </value>
            <value>
                <fullName>Venda Fechada Direito de Imagem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>