force-app/main/default/objects/Lead/fields/referencia_base_antiga_lead__c.field-meta.xml
<CustomField>
    <fullName>referencia_base_antiga_lead__c</fullName>
    <label>Referência base antiga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antigo sem contato e tentativa de contato</fullName>
            </value>
            <value>
                <fullName>Base Inativa</fullName>
            </value>
            <value>
                <fullName>Base lead ativa RD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>