force-app/main/default/objects/Lead/fields/ScoreFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>ScoreFinanceiro__c</fullName>
    <label>Score Financeiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>