force-app/main/default/objects/Lead/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <description>Segmento do lead</description>
    <inlineHelpText>Segmento do lead</inlineHelpText>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segmentos</valueSetName>
    </valueSet>
</CustomField>