force-app/main/default/objects/Lead/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>