force-app/main/default/objects/Lead/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repescagem</fullName>
            </value>
            <value>
                <fullName>Redistribuição</fullName>
            </value>
            <value>
                <fullName>QRCode</fullName>
            </value>
            <value>
                <fullName>Reprospecção</fullName>
            </value>
            <value>
                <fullName>Blitz - Black Friday 2024</fullName>
            </value>
            <value>
                <fullName>Carga Agências</fullName>
            </value>
            <value>
                <fullName>Repescagem - tentativas de contato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>