force-app/main/default/objects/Lead/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>Qual foi a campanha de origem do lead</description>
    <inlineHelpText>Qual foi a campanha de origem do lead</inlineHelpText>
    <label>UTM Campaign</label>
    <length>150</length>
    <type>Text</type>
</CustomField>