force-app/main/default/objects/Lead/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>Qual foi o conteúdo de origem do lead</description>
    <inlineHelpText>Qual foi o conteúdo de origem do lead</inlineHelpText>
    <label>UTM Content</label>
    <length>150</length>
    <type>Text</type>
</CustomField>