force-app/main/default/objects/Lead/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>Qual foi a mídia de origem do lead</description>
    <inlineHelpText>Qual foi a mídia de origem do lead</inlineHelpText>
    <label>UTM Medium</label>
    <length>150</length>
    <type>Text</type>
</CustomField>