force-app/main/default/objects/Lead/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>Qual foi a origem do lead</description>
    <inlineHelpText>Qual foi a origem do lead</inlineHelpText>
    <label>UTM Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>