force-app/main/default/objects/Lead/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <description>Qual foi o Term de origem do lead</description>
    <inlineHelpText>Qual foi o Term de origem do lead</inlineHelpText>
    <label>UTM Term</label>
    <length>150</length>
    <type>Text</type>
</CustomField>