force-app/main/default/objects/Lead/fields/ValueScore__c.field-meta.xml
<CustomField>
    <fullName>ValueScore__c</fullName>
    <label>ValueScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>