force-app/main/default/objects/Lead/fields/ValueScoreFinanceiro__c.field-meta.xml
<CustomField>
    <fullName>ValueScoreFinanceiro__c</fullName>
    <label>Score Financeiro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>