force-app/main/default/objects/Lead/fields/WhatsYourInstagram__c.field-meta.xml
<CustomField>
    <fullName>WhatsYourInstagram__c</fullName>
    <label>Instagram da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>