force-app/main/default/objects/Lead/recordTypes/Midias.recordType-meta.xml
<RecordType>
    <fullName>Midias</fullName>
    <active>true</active>
    <businessProcess>Varejo_</businessProcess>
    <label>Mídias</label>
</RecordType>