force-app/main/default/objects/Lead/recordTypes/Varejo_Tradicional.recordType-meta.xml
<RecordType>
    <fullName>Varejo_Tradicional</fullName>
    <active>true</active>
    <businessProcess>Varejo Tradicional</businessProcess>
    <label>Varejo Tradicional</label>
</RecordType>