force-app/main/default/objects/Lead/validationRules/Lead_Bloquear_Mudanca_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Bloquear_Mudanca_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(OwnerId ), $User.ProfileId = &apos;00eHp000002fC4S&apos;)</errorConditionFormula>
    <errorMessage>Você não tem permissão para alterar o proprietário do Lead.</errorMessage>
</ValidationRule>